# cinekive

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  docker-compose.desktop.yml  docker-compose.gpu.yml  docker-compose.yml
.github/: FUNDING.yml  (+1 more)
apps/api/: Dockerfile  alembic.ini  fix_project_dir.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_phase12.py
apps/api/scripts/: _patch_vlm_prompt.py
apps/api/src/cinearchive/: __init__.py  config.py  main.py
apps/api/src/cinearchive/api/: deps.py
apps/api/src/cinearchive/db/: session.py
apps/api/src/cinearchive/jobs/: dedupe_global_runner.py  dedupe_runner.py  dedupe_scheduler.py  dialogue_runner.py  enrich_runner.py  enrich_scheduler.py  progress.py  reindex_runner.py  runner.py
apps/api/src/cinearchive/pipelines/: __init__.py  archive_meta.py  audio_analysis.py  color_analysis.py  dialogue.py  embedding.py  frame_extractor.py  inspiration_seek.py  media_download.py  palette.py  preview_generator.py  scene_detection.py  sequence_grader.py  sidecar_meta.py  tag_quality.py  taxonomy.py  vlm_enrichment.py  vlm_tiers.py
apps/api/src/cinearchive/repositories/: __init__.py  job_repo.py  project_repo.py  shot_repo.py  vector_repo.py
apps/api/src/cinearchive/schemas/: __init__.py  collection.py  ingest.py  job.py  project.py  search.py  shot.py
apps/api/src/cinearchive/scripts/: backfill_display_titles.py  backfill_film_title_tags.py  backfill_gif_previews.py
docs/: FAQ.md  (+8 more)
(+154 files in other folders)
