[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinearchive-api"
version = "0.1.0"
description = "Cinekive — local cinematic visual library API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "scenedetect[opencv]>=0.6.4",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "httpx>=0.28.0",
    "yt-dlp>=2024.8.0",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
